--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -31,6 +31,12 @@
     --description-color: #595959;
     --line-color: #E0E0E0;
     --shadow: rgba(16, 36, 139, 0.16);
+    --text-secondary-mobile: 24px;
+    --text-primary-mobile: 30px;
+    --text-description-mobile: 18px;
+    --text-primary-tablet: 38px;
+    --text-secondary-tablet: 30px;
+    --text-description-tablet: 22px;
 }
 
 .container {
@@ -47,13 +53,12 @@ header .container {
     padding: 40px 0px 157px 0px;
 }
 
-header .btn-primary {
-    cursor: pointer;
+nav img {
+    display: none;
 }
 
-.logo {
-    display: flex;
-    gap: 8px;
+header .btn-primary {
+    cursor: pointer;
 }
 
 .logo h2 {
@@ -64,7 +69,12 @@ header .btn-primary {
     align-items: center;
     max-width: 116px;
     width: 100%;
+}
 
+.logo a {
+    display: flex;
+    gap: 8px;
+    text-decoration: none;
 }
 
 .btn {
@@ -242,7 +252,6 @@ nav a {
 .how-work {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     text-align: center;
     max-width: 854px;
     width: 100%;
@@ -280,18 +289,22 @@ nav a {
 }
 
 .brand {
-    position: relative;
     overflow: hidden;
     width: 100%;
     padding-bottom: 87px;
 }
 
+@keyframes brand-auto {
+    from {transform: translateX(0);}
+    to {transform: translateX(-50%);}
+}
+
 .brand-auto {
+    animation: brand-auto 45s linear infinite;
     justify-content: space-between;
     display: flex;
+    width: max-content;
     gap: 96px;
-    position: relative;
-    left: -100px;
 }
 
 .choose {
@@ -330,6 +343,10 @@ nav a {
 .choose-car img {
     left: 0;
     position: absolute;
+}
+
+.vector-midle {
+    display: none;
 }
 
 .choose-text {
@@ -405,6 +422,8 @@ nav a {
     justify-content: center;
     gap: 32px;
     padding-bottom: 64px;
+    max-width: 1100px;
+    width: 100%;
 }
 
 .rent-car-content {
@@ -416,8 +435,10 @@ nav a {
 }
 
 .car-image {
-    width: 208px;
-    height: 93px;
+    max-width: 208px;
+    width: 100%;
+    max-height: 93px;
+    height: 100%;
 }
 
 .car {
