chore:change locate ul from footer

--- a/assets/style/media/media-width-580.css
+++ b/assets/style/media/media-width-580.css
@@ -108,6 +108,7 @@
 
     .how-work-text h2 {
         font-size: var(--text-primary-mobile);
+        text-align: center;
     }
 
     .how-work-text p {
