--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -143,7 +143,7 @@ nav a {
 .find-car-image img {
     max-width: 791px;
     width: 100%;
-    height: 537px;
+    max-height: 537px;
     height: 100%;
 }
 
@@ -636,6 +636,8 @@ nav a {
 }
 
 .reviews-content {
+    max-width: 794px;
+    width: 100%;
     display: flex;
     align-items: center;
     box-shadow: 0px 12px 24px var(--shadow);
