chore:change width and set flex for div reviews-text

--- a/assets/style/media/media-width-1024.css
+++ b/assets/style/media/media-width-1024.css
@@ -342,8 +342,9 @@
     }
 
     .reviews-text {
-        padding-left: 20px;
-        max-width: 260px;
+        display: flex;
+        max-width: 600px;
+        width: 100%;
     }
 
     .five-star {
