--- a/assets/style/media/media-width-580.css
+++ b/assets/style/media/media-width-580.css
@@ -331,8 +331,9 @@
         }
 
         .reviews-text {
-            padding-left: 20px;
-            max-width: 260px;
+            display: flex;
+            align-items: center;
+            padding: 20px;
         }
 
         .five-star {
@@ -340,6 +341,7 @@
         }
 
         .description-reviews {
+            text-align: center;
             padding-bottom: 20px;
         }
 
